@@ -2,7 +2,7 @@ name    = Text-Parser
 author  = Balaji Ramasubramanian <balajiram@cpan.org>
 license = Perl_5
 copyright_holder = Balaji Ramasubramanian
-copyright_year   = 2018
+copyright_year   = 2018-2019
 
 
 ;; Determine the next version from the Git repo
